# Utility_Cost_Optimizer

./: .gitignore  README.md  docker-compose.yaml
service/: .env  Dockerfile  README.md  pyproject.toml  real_estate_report.txt
service/models/: FULL_adresses_data_RUS.xlsx
service/service/: auth.py  config.py  main.py  start.py
service/service/components/: choose_params.py  history_item.py  model_params.py
service/service/hacks/: authenticate.py
service/service/pages_/: __init__.py  about.py  dashboard.py  default.py  emissions.py  history.py  main.py  map.py  report.py  x_to_y.py
service/service/utils/: history.py  load_model.py  set_step.py  train.py
