[tool.poetry]
name = "service"
version = "0.1.0"
description = ""
authors = ["Sergey Dorokhov <seregapax@gmail.com>"]
readme = "README.md"


[tool.poetry.scripts]
start = "service.start:start"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.28.2"
streamlit-authenticator = "^0.2.3"
streamlit-antd-components = "^0.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
