[tool.poetry]
name = "service"
version = "0.1.0"
description = ""
authors = ["Sergey Dorokhov <seregapax@gmail.com>"]
readme = "README.md"


[tool.poetry.scripts]
start = "service.start:start"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.28.2"
streamlit-authenticator = "^0.2.3"
streamlit-antd-components = "^0.2.3"
streamlit-folium = "^0.16.0"
matplotlib = "^3.8.2"
hydralit = "^1.0.14"
streamlit-javascript = "^0.1.5"
catboost = "^1.2.2"
sklearn = "^0.0.post11"
statsmodels = "^0.14.0"
seaborn = "^0.13.0"
scipy = "^1.11.4"
tqdm = "^4.66.1"
shap = "^0.43.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
